applications/cdn/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdn
  labels:
    homelab.dohrm.fr/env: prod
    homelab.dohrm.fr/tier: app
